-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9, 10, 11, 13, 14
-
Component/s: hotspot
-
b09
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241339 | 13.0.3 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8230468 | 11.0.6-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8230748 | 11.0.6 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
See the report here:
https://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2019-August/026637.html
$ build/linux-x86_64-server-fastdebug/images/jdk/bin/java -cp .:tinylog-1.3.5.jar JVMCrashOnJDK11
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/g1/c2/g1BarrierSetC2.cpp:665), pid=18721, tid=18748
# assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required
#
# JRE version: OpenJDK Runtime Environment (14.0) (fastdebug build 14-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 14-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xbefedb] G1BarrierSetC2::eliminate_gc_barrier(PhaseMacroExpand*, Node*) const+0x4b
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/shade/temp/gc/core.18721)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: JVMCrashOnJDK11
Host: shade-desktop, Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz, 16 cores, 125G, Ubuntu 18.04.2 LTS
Time: Fri Aug 2 10:13:44 2019 CEST elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f854c1ce800): JavaThread "C2 CompilerThread4" daemon [_thread_in_native, id=18748, stack(0x00007f85712ce000,0x00007f85713cf000)]
Current CompileTask:
C2: 550 419 % 4 JVMCrashOnJDK11::main @ 10 (116 bytes)
Stack: [0x00007f85712ce000,0x00007f85713cf000], sp=0x00007f85713ca1c0, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xbefedb] G1BarrierSetC2::eliminate_gc_barrier(PhaseMacroExpand*, Node*) const+0x4b
V [libjvm.so+0x1227bc0] PhaseMacroExpand::process_users_of_allocation(CallNode*)+0x660
V [libjvm.so+0x1228ccb] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.202]+0x32b
V [libjvm.so+0x122e8eb] PhaseMacroExpand::eliminate_macro_nodes()+0x5cb
V [libjvm.so+0x9c5399] Compile::Optimize()+0xe79
V [libjvm.so+0x9c6696] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1136
V [libjvm.so+0x8005fd] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
V [libjvm.so+0x9d2c94] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x394
V [libjvm.so+0x9d3ed8] CompileBroker::compiler_thread_loop()+0x4f8
V [libjvm.so+0x182a7ca] JavaThread::thread_main_inner()+0x26a
V [libjvm.so+0x1832518] JavaThread::run()+0x238
V [libjvm.so+0x182ff66] Thread::call_run()+0xf6
V [libjvm.so+0x142fa56] thread_native_entry(Thread*)+0x116
https://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2019-August/026637.html
$ build/linux-x86_64-server-fastdebug/images/jdk/bin/java -cp .:tinylog-1.3.5.jar JVMCrashOnJDK11
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/g1/c2/g1BarrierSetC2.cpp:665), pid=18721, tid=18748
# assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required
#
# JRE version: OpenJDK Runtime Environment (14.0) (fastdebug build 14-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 14-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xbefedb] G1BarrierSetC2::eliminate_gc_barrier(PhaseMacroExpand*, Node*) const+0x4b
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/shade/temp/gc/core.18721)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: JVMCrashOnJDK11
Host: shade-desktop, Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz, 16 cores, 125G, Ubuntu 18.04.2 LTS
Time: Fri Aug 2 10:13:44 2019 CEST elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f854c1ce800): JavaThread "C2 CompilerThread4" daemon [_thread_in_native, id=18748, stack(0x00007f85712ce000,0x00007f85713cf000)]
Current CompileTask:
C2: 550 419 % 4 JVMCrashOnJDK11::main @ 10 (116 bytes)
Stack: [0x00007f85712ce000,0x00007f85713cf000], sp=0x00007f85713ca1c0, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xbefedb] G1BarrierSetC2::eliminate_gc_barrier(PhaseMacroExpand*, Node*) const+0x4b
V [libjvm.so+0x1227bc0] PhaseMacroExpand::process_users_of_allocation(CallNode*)+0x660
V [libjvm.so+0x1228ccb] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.202]+0x32b
V [libjvm.so+0x122e8eb] PhaseMacroExpand::eliminate_macro_nodes()+0x5cb
V [libjvm.so+0x9c5399] Compile::Optimize()+0xe79
V [libjvm.so+0x9c6696] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1136
V [libjvm.so+0x8005fd] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
V [libjvm.so+0x9d2c94] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x394
V [libjvm.so+0x9d3ed8] CompileBroker::compiler_thread_loop()+0x4f8
V [libjvm.so+0x182a7ca] JavaThread::thread_main_inner()+0x26a
V [libjvm.so+0x1832518] JavaThread::run()+0x238
V [libjvm.so+0x182ff66] Thread::call_run()+0xf6
V [libjvm.so+0x142fa56] thread_native_entry(Thread*)+0x116
- backported by
-
JDK-8230748 C2 scalarization crashes with assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required
-
- Resolved
-
-
JDK-8241339 C2 scalarization crashes with assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required
-
- Resolved
-
-
JDK-8230468 C2 scalarization crashes with assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required
-
- Closed
-
- relates to
-
JDK-8231055 C2: arraycopy with same non escaping src and dest but different positions causes wrong execution
-
- Closed
-