8229016: C2 scalarization crashes with assert(node->Opcode() == Op_CastP2X) failed: ConvP2XNode required

Detect array copy to self to avoid emitting another load to the to-be-removed allocation.

Reviewed-by: kvn